--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
         rel="search"
         type="application/opensearchdescription+xml"
         title="Cosmos"
-        href="/static/opensearch.xml" />
+        href="opensearch.xml" />
         <meta name="description" content="Privacy friendly beautiful metasearch engine.">
         <meta name="keywords" content="Search Engine, Metasearch engine, privacy, search, cosmos">
         <meta name="author" content="Asterjdm">
     
-        <link rel="stylesheet" href="/static/style/home.css">
+        <link rel="stylesheet" href="style/home.css">
     </head>
 
     <body>
         <div class="main">
             <h1 class="main-title">cosmosearch</h1>   
-            <form method="get" action="/search/" class="searchForm"> 
+            <form method="get" action="search/" class="searchForm"> 
                 <div class="inter">
-                    <img src="/static/images/search.png" alt="Search icon" class="search-img">
+                    <img src="images/search.png" alt="Search icon" class="search-img">
                         <input name="q" type="text" class="search-input" placeholder="Enter text to search">
                     <button class="send-button" type="submit"> 
-                        <img src="/static/images/send.png" alt="Send icon" class="send-img">
+                        <img src="images/send.png" alt="Send icon" class="send-img">
                     </button>
                 </div>
             </form>
